# MEGAN-1.0

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
Alert/: sms_alert.py
Assets/: privacy-policy.html  terms-of-service.html
Telegram/broadcaster/: broadcaster.py
dashboard/: index.html
diagrams_vault/: gocryptfs.conf  gocryptfs.diriv
